--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <div id=nav>
+      <ul>
+        <li class="navitem" style="margin-right: auto; padding: 0;"><img src="C:\Users\Sandra\Documents\GitHub\SaaS-Website\saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px"></li>
+        <li class="navitem"><a href="#">Home</a></li>
+        <li class="navitem"><a href="#">Features</a></li>
+        <li class="navitem"><a href="#">Learn</a></li>
+        <li class="navitem"><a href="#">Pricing</a></li>
+        <li class="navitem"><a href="#">Hire Us</a></li>
+        <li class="navitem"><button>Buy Now</button></li>
+      </ul>
+    </div>
   </body>
 </html>
