--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <section class="top-section">
+      <div class="top-section-content">
+      <div class="header">
+          <img src="C:\Users\sandr\OneDrive\Documents\GitHub\SaaS-Website\saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px" id="logo">
+            <ul class="nav">
+              <li><a class="text" href="#">Home</a></li>
+              <li><a class="text" href="#">Features</a></li>
+              <li><a class="text" href="#">Learn</a></li>
+              <li><a class="text" href="#">Pricing</a></li>
+              <li><a class="text" href="#">Hire Us</a></li>
+              <li><button class="button text" id="btntext"><b>Buy Now</b></button></li>
+            </ul>
+      </div>
+      </section>
+    </section>
   </body>
 </html>
