--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>SaaS Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="top-section">
       <div class="top-section-content">
       <div class="header">
-          <img src="C:\Users\sandr\OneDrive\Documents\GitHub\SaaS-Website\saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px" id="logo">
+          <img src="saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px" id="logo">
             <ul class="nav">
               <li><a class="text" href="#">Home</a></li>
               <li><a class="text" href="#">Features</a></li>
