--- a/index.html
+++ b/index.html
@@ -5,24 +5,39 @@
     <title>SaaS Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3a937f3e2b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section class="top-section">
       <div class="top-section-content">
-      <div class="header">
-          <img src="saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px" id="logo">
+        <div class="header">
+          <img src="saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px">
             <ul class="nav">
-              <li><a class="text" href="#">Home</a></li>
-              <li><a class="text" href="#">Features</a></li>
-              <li><a class="text" href="#">Learn</a></li>
-              <li><a class="text" href="#">Pricing</a></li>
-              <li><a class="text" href="#">Hire Us</a></li>
+              <li><a class="linktext" href="#">Home</a></li>
+              <li><a class="linktext" href="#">Features</a></li>
+              <li><a class="linktext" href="#">Learn</a></li>
+              <li><a class="linktext" href="#">Pricing</a></li>
+              <li><a class="linktext" href="#">Hire Us</a></li>
               <li><button class="button text" id="btntext"><b>Buy Now</b></button></li>
             </ul>
+        </div>
+        <div class="hero">
+          <div class="left">
+            <div class="toptext">
+              <h2 class="title">Empowering teams with freedom</h2>
+              <p>Own the unlimited power of the web development</p>
+            </div>
+            <div class="actions">
+              <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
+              <a class="learnmore">Learn more</a>
+            </div>
+          </div>
+          <div class="right">
+          </div>
+        </div>
       </div>
-      </section>
     </section>
   </body>
 </html>
