--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="hero">
           <div class="left">
             <div class="toptext">
-              <h2 class="title">Empowering teams with freedom</h2>
+              <h1 class="title">Empowering teams with freedom</h2>
               <p>Own the unlimited power of the web development</p>
             </div>
             <div class="actions">
@@ -35,6 +35,49 @@
             </div>
           </div>
           <div class="right">
+            
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="key-benefits">
+      <div class="benefits-title">
+        <h2>Key Benefits</h2>
+        <p>Design faster with a growing array of beautiful templates</p>
+      </div>
+      <div class="benefit-list">
+        <div class="benefit-item">
+          <div class="item-content">
+            <img src="saasprojectassets\saas-project-assets\icons\responsive.svg" alt="" class="item-icon">
+            <h3>Responsive</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="learnmore">Learn more</p>
+          </div>
+        </div>
+        <div class="benefit-item">
+          <div class="item-content">
+            <img src="saasprojectassets\saas-project-assets\icons\customizable.svg" alt="" class="item-icon">
+            <h3>Customizable</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="learnmore">Learn more</p>
+          </div>
+        </div>
+        <div class="benefit-item">
+          <div class="item-content">
+            <img src="saasprojectassets\saas-project-assets\icons\premium.svg" alt="" class="item-icon">
+            <div class="top-part">
+              <h3>Premium</h3><div class="status">sketch</div>
+            </div>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="learnmore">Learn more</p>
+          </div>
+        </div>
+        <div class="benefit-item">
+          <div class="item-content">
+            <img src="saasprojectassets\saas-project-assets\icons\documentation.svg" alt="" class="item-icon">
+            <h3>Documentation</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="learnmore">Learn more</p>
           </div>
         </div>
       </div>
