--- a/index.html
+++ b/index.html
@@ -10,34 +10,30 @@
     <script src="https://kit.fontawesome.com/3a937f3e2b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <section class="top-section">
-      <div class="top-section-content">
-        <div class="header">
-          <img src="saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px">
-            <ul class="nav">
-              <li><a class="linktext" href="#">Home</a></li>
-              <li><a class="linktext" href="#">Features</a></li>
-              <li><a class="linktext" href="#">Learn</a></li>
-              <li><a class="linktext" href="#">Pricing</a></li>
-              <li><a class="linktext" href="#">Hire Us</a></li>
-              <li><button class="button text" id="btntext"><b>Buy Now</b></button></li>
-            </ul>
+    <section class="header">
+      <img src="saasprojectassets\saas-project-assets\project_logo\logo.svg" alt="logo" width="200px" height="100px">
+      <ul class="nav">
+        <li><a class="linktext" href="#">Home</a></li>
+        <li><a class="linktext" href="#">Features</a></li>
+        <li><a class="linktext" href="#">Learn</a></li>
+        <li><a class="linktext" href="#">Pricing</a></li>
+        <li><a class="linktext" href="#">Hire Us</a></li>
+        <li><button class="button text" id="btntext"><b>Buy Now</b></button></li>
+      </ul>
+    </section>
+    <section class="hero"> <!-- TODO: Add background-->
+      <div class="left">
+        <div class="toptext">
+          <h1>Empowering teams with freedom</h2>
+          <p>Own the unlimited power of the web development</p>
         </div>
-        <div class="hero">
-          <div class="left">
-            <div class="toptext">
-              <h1 class="title">Empowering teams with freedom</h2>
-              <p>Own the unlimited power of the web development</p>
-            </div>
-            <div class="actions">
-              <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
-              <a class="learnmore">Learn more</a>
-            </div>
-          </div>
-          <div class="right">
+        <div class="actions">
+          <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
+          <a class="learnmore">Learn more</a>
+        </div>
+      </div>
+      <div class="right">
             
-          </div>
-        </div>
       </div>
     </section>
     <section class="key-benefits">
@@ -80,6 +76,15 @@
             <p class="learnmore">Learn more</p>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="banner">
+      <div class="leftpart">
+        <h2 style="font-weight: 500;">Font makes you look at things from a different prospective</h2>
+        <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
+      </div>
+      <div class="rightpart">
+        <img src="saasprojectassets\saas-project-assets\banners\banner_one.jpg" alt="banner" class="bannerimg1">
       </div>
     </section>
   </body>
