--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </section>
     <section class="key-benefits">
-      <div class="benefits-title">
+      <div class="title">
         <h2>Key Benefits</h2>
         <p>Design faster with a growing array of beautiful templates</p>
       </div>
@@ -80,11 +80,43 @@
     </section>
     <section class="banner">
       <div class="leftpart">
-        <h2 style="font-weight: 500;">Font makes you look at things from a different prospective</h2>
+        <h2 style="font-weight: 500;">Front makes you look at things from a different prospective</h2>
         <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
       </div>
       <div class="rightpart">
         <img src="saasprojectassets\saas-project-assets\banners\banner_one.jpg" alt="banner" class="bannerimg1">
+      </div>
+    </section>
+    <section class="whyfront">
+      <div class="title">
+        <h2>Why front?</h2>
+        <p>Front is an incredibly beautiful, fully responsive , and mobile-first projects on the web - it is the starting point for creative sites</p>
+      </div>
+      <div class="bulletslist">
+        <div class="bullet">
+          <div class="bullettop">
+
+          </div>
+          <h3 style="font-weight: 500;">Basic elements</h3>
+        </div>
+        <div class="bullet">
+          <div class="bullettop">
+
+          </div>
+          <h3 style="font-weight: 500;">Components</h3>
+        </div>
+        <div class="bullet">
+          <div class="bullettop">
+
+          </div>
+          <h3 style="font-weight: 500;">Combined components</h3>
+        </div>
+        <div class="bullet">
+          <div class="bullettop">
+
+          </div>
+          <h3 style="font-weight: 500;">Page layouts</h3>
+        </div>
       </div>
     </section>
   </body>
