added right side hero
added right side of hero, icons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero"> <!-- TODO: Add background-->
       <div class="left">
         <div class="toptext">
-          <h1>Empowering teams with freedom</h2>
+          <h1>Empowering teams with the freedom</h2>
           <p>Own the unlimited power of the web development</p>
         </div>
         <div class="actions">
@@ -33,7 +33,13 @@
         </div>
       </div>
       <div class="right">
-            
+          <div class="a logobg"><img src="saasprojectassets\saas-project-assets\logo_icons\google.png" alt="logo" class="logo"></div>
+          <div class="b logobg2"><img src="saasprojectassets\saas-project-assets\logo_icons\atlassian.png" alt="logo" class="logo2"></div>
+          <div class="c logobg2"><img src="saasprojectassets\saas-project-assets\logo_icons\asana.png" alt="logo" class="logo2"></div>
+          <div class="d logobg2"><img src="saasprojectassets\saas-project-assets\logo_icons\paypal.jpg" alt="logo" class="logo2"></div>
+          <div class="e logobg2"><img src="saasprojectassets\saas-project-assets\logo_icons\weave.png" alt="logo" class="logo2"></div>
+          <div class="f logobg"><img src="saasprojectassets\saas-project-assets\logo_icons\google-A.png" alt="logo" class="logo"></div>
+          <div class="g logobg2"><img src="saasprojectassets\saas-project-assets\logo_icons\calendar.png" alt="logo" class="logo2"></div>  
       </div>
     </section>
     <section class="key-benefits">
