--- a/index.html
+++ b/index.html
@@ -125,5 +125,21 @@
         </div>
       </div>
     </section>
+    <section class="bannertwo">
+
+    </section>
+    <section class="hubspot">
+
+    </section>
+    <section class="brands">
+      <h3>TRUSTED BY WORLD'S BEST</h3>
+      <div class="brandslist">
+        <img src="saasprojectassets\saas-project-assets\company_logos\weebly.svg" alt="weebly" class="brandsicon">
+        <img src="saasprojectassets\saas-project-assets\company_logos\uber.svg" alt="uber" class="brandsicon">
+        <img src="saasprojectassets\saas-project-assets\company_logos\slack.svg" alt="slack" class="brandsicon">
+        <img src="saasprojectassets\saas-project-assets\company_logos\airbnb.svg" alt="airbnb" class="brandsicon">
+        <img src="saasprojectassets\saas-project-assets\company_logos\slack.svg" alt="slack" class="brandsicon">
+      </div>
+    </section>
   </body>
 </html>
