--- a/index.html
+++ b/index.html
@@ -141,5 +141,27 @@
         <img src="saasprojectassets\saas-project-assets\company_logos\slack.svg" alt="slack" class="brandsicon">
       </div>
     </section>
+    <section class="pricing">
+      <div class="pricingtitle">
+        <h2>Pricing</h2>
+        <p>No additional costs. Pay for what you use</p>
+      </div>
+      <div class="plansfeatures">
+        <div class="plan">
+          <div class="planheader">
+            <div class="planprice">
+              <h1 style="font-size: 50px;">59</h1>
+              <p>/ mo</p>
+            </div>
+            <div class="plandivider"></div>
+            <p>Start your Front business now. 100% guaranteed money back. No questions asked.</p>
+          </div>
+          <div class="planfooter">
+            <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
+            <p style="font-size: 12px;">No credit card required.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
