Hire us left part
Added hire us left part.
Also fixed bottom margin on pricing

--- a/index.html
+++ b/index.html
@@ -163,5 +163,28 @@
         </div>
       </div>
     </section>
+    <section class="hireus">
+      <div class="hireleft">
+        <div class="hiretop">
+          <div class="hiretitle">
+            <h2 style="color: #FFF;">Hire Us</h2>
+            <p>Whatever your goal - we will get you there</p>
+            <hr style="width: 180px; height: 1px; background: #FFF;">
+          </div>
+          <p style="color: #FFF; font-style: italic;">“ I love front! I love the ease of use, I love the fact that I have total creative freedom...” </p>
+        </div>
+        <div class="hirebottom">
+          <div class="person">
+            <h3 style="color: #FFF; font-weight: 500;">Charlotte Moore</h3>
+            <p>Head of Commercials, Slack</p>
+          </div>
+          <div class="personimgs">
+            <img src="saasprojectassets\saas-project-assets\people\woman_two.jpg" alt="woman" class="hireimg">
+            <img src="saasprojectassets\saas-project-assets\people\woman_one.jpg" alt="woman" class="hireimg">
+            <img src="saasprojectassets\saas-project-assets\people\man_one.jpg" alt="man" class="hireimg" style="width: 60px; height: 60px; border-radius: 30px;">
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
