Finished Pricing Right
Finished pricing section by adding right part
Also fixed padding in left part

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <h2>Pricing</h2>
         <p>No additional costs. Pay for what you use</p>
       </div>
-      <div class="plansfeatures">
+      <div class="plansfeatureslist">
         <div class="plan">
           <div class="planheader">
             <div class="planprice">
@@ -159,6 +159,42 @@
           <div class="planfooter">
             <button class="button" id="btntext"><i class="fa-solid fa-circle-play" style="color: #ffffff;"></i>Play Video</button>
             <p style="font-size: 12px;">No credit card required.</p>
+          </div>
+        </div>
+        <div class="plansfeatures">
+          <div class="row">
+            <div class="planfeatureitem">
+              <div class="itemcontent">
+                <img src="saasprojectassets\saas-project-assets\icons\components.svg" style="width: 50px; height: 50px;">
+                <h2 style="font-size: 18px;">Hundreds of components</h2>
+                <p style="font-size: 14px;">Achieve maximum productivity with minimum effort with Front and create robust Limitless products.</p>
+              </div>
+            </div>
+            <div class="planfeatureitem">
+              <div class="itemcontent">
+                <img src="saasprojectassets\saas-project-assets\icons\images.svg" style="width: 50px; height: 50px;">
+                <h2 style="font-size: 18px;">Images included</h2>
+                <p style="font-size: 14px;">Images included We made custom license for all our premium images in the front</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="planfeatureitem">
+              <div class="itemtop">
+                <img src="saasprojectassets\saas-project-assets\icons\cancel.svg" style="width: 50px; height: 50px;">
+                <div class="titlewithicon">
+                  <h2 style="font-size: 18px;">Cancel anytyme</h2><div class="status">sketch</div>
+                </div>
+              </div>
+              <p style="font-size: 14px;">If its not for you, just cancel, no hidden cots or fees.</p>
+            </div>
+            <div class="planfeatureitem">
+              <div class="itemcontent">
+                <img src="saasprojectassets\saas-project-assets\icons\moneyback.svg" style="width: 50px; height: 50px;">
+                <h2 style="font-size: 18px;">Money back</h2>
+                <p style="font-size: 14px;">100% guarateed money back. No questions asked.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
