--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <img src="saasprojectassets\saas-project-assets\banners\banner_one.jpg" alt="banner" class="bannerimg1">
       </div>
     </section>
-    <section class="whyfront">
+    <section class="whyfront"> <!-- TODO: Add graphic-->
       <div class="title">
         <h2>Why front?</h2>
         <p>Front is an incredibly beautiful, fully responsive , and mobile-first projects on the web - it is the starting point for creative sites</p>
@@ -125,10 +125,10 @@
         </div>
       </div>
     </section>
-    <section class="bannertwo">
+    <section class="bannertwo"> <!-- TODO -->
 
     </section>
-    <section class="hubspot">
+    <section class="hubspot"> <!-- TODO -->
 
     </section>
     <section class="brands">
@@ -199,7 +199,7 @@
         </div>
       </div>
     </section>
-    <section class="hireus">
+    <section class="hireus"> <!-- TODO: Add right part -->
       <div class="hireleft">
         <div class="hiretop">
           <div class="hiretitle">
